--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                 <div
                   class="react-reveal flex justify-center items-center bg-bg2 border-secondary border-4 border-dashed gap-3 w-fit mt-5 p-2 rounded-3xl"
                 >
-                  <a href="https://t.me/RatoTheRat">
+                  <a href="https://t.me/RatoTheRatErc">
                     <span
                       style="
                         box-sizing: border-box;
@@ -467,7 +467,7 @@
                           "
                           class=" "
                           loading="lazy" /></noscript></span></a
-                  ><a href="https://x.com/RatoTheRatCoin">
+                  ><a href="https://x.com/RatoTheRatErc">
                     <span
                       style="
                         box-sizing: border-box;
@@ -1140,7 +1140,7 @@
               <div
                 class="react-reveal flex justify-center items-center bg-white gap-3 w-fit mt-5 p-4 rounded-3xl"
               >
-                <a href="https://t.me/RatoTheRat">
+                <a href="https://t.me/RatoTheRatErc">
                   <span
                     style="
                       box-sizing: border-box;
@@ -1241,7 +1241,7 @@
                         "
                         class=" "
                         loading="lazy" /></noscript></span></a
-                ><a href="https://x.com/RatoTheRatCoin">
+                ><a href="https://x.com/RatoTheRatErc">
                   <span
                     style="
                       box-sizing: border-box;
